# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = ["crates/*"]
default-members = ["crates/e2etest"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.97"
async-backtrace = "0.2.7"
clap = { version = "4.5.40", features = ["derive"] }
e2etest = { path = "crates/e2etest", version = "0.1.0" }
futures = "0.3.31"
hickory-server = "0.26.1"
neli = { version = "0.7.4", default-features = false, features = ["async"] }
num-bigint = "0.4"
rustls = "0.23"
rustls-pki-types = "1.13.1"
rcgen = "0.14.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scylla-proxy = "0.0.5"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.37.2"
tap = "1.0.1"
tempfile = "3.20.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
