# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-dns"
version = "0.1.0"
description = "DNS server for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
hickory-server.workspace = true
tokio.workspace = true
tracing.workspace = true
