# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-firewall"
version = "0.1.0"
description = "Firewall for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-backtrace.workspace = true
neli.workspace = true
tokio.workspace = true
tracing.workspace = true
