# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-macros"
version = "0.1.0"
description = "Macros for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
itertools.workspace = true
linkme.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
