# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-scylla-cluster"
version.workspace = true
description = "Scylla cluster manager for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
e2etest.workspace = true
sysinfo.workspace = true
tap.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
