# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-scylla-proxy-cluster"
version = "0.1.0"
description = "Scylla proxy cluster manager for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
scylla-proxy.workspace = true
tokio.workspace = true
tracing.workspace = true
