# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest-tls"
version = "0.1.0"
description = "TLS manager for e2etest"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
