# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "e2etest"
version = "0.1.0"
description = "E2E test framework for Rust"
repository = "https://github.com/scylladb/e2etest-rs"
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
clap.workspace = true
futures.workspace = true
itertools.workspace = true
tokio.workspace = true
tracing.workspace = true
